--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <li><a href="link/othersucculentsindex.html#echinatum">Delosperma echinatum</a></li>
                         <li><a href="link/othersucculentsindex.html#pulchra">Frithia pulchra</a></li>
                         <li><a href="link/othersucculentsindex.html#lithops">Lithops</a></li>
-                        <li><a href="link/othersucculentsindex.html#titanopsis">Titanopsis</a></li>
+                        <li><a href="link/othersucculentsindex.html#titanopsiscalcarea">Titanopsis calcarea</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Tillandsia</a>
