--- a/link/otherplantsindex.html
+++ b/link/otherplantsindex.html
@@ -36,7 +36,11 @@
                 <a href="#anthurium6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="anthurium1"><span class="species">Anthurium<a href="otherplantsgallery.html#anthurium">Voir la galerie photo</a></span>
-                    <img src="../assets/img/otherplants/index/anthurium.jpg" alt="Anthurium" title="Anthurium"/>
+                    <img src="../assets/img/otherplants/index/anthurium(1).jpg" alt="Anthurium" title="Anthurium"/>
+                    <img src="../assets/img/otherplants/index/anthurium(2).jpg" alt="Anthurium" title="Anthurium"/>
+                    <img src="../assets/img/otherplants/index/anthurium(3).jpg" alt="Anthurium" title="Anthurium"/>
+                    <img src="../assets/img/otherplants/index/anthurium(4).jpg" alt="Anthurium" title="Anthurium"/>
+                    <img src="../assets/img/otherplants/index/anthurium(5).jpg" alt="Anthurium" title="Anthurium"/>
             </div>   
             <div class="index-category-tab-content" id="anthurium2" hidden="hidden">Je le mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 15°C.
             </div>
@@ -60,7 +64,11 @@
                 <a href="#strawberry6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="strawberry1"><span class="species">Caladium strawberry<a href="otherplantsgallery.html#strawberry">Voir la galerie photo</a></span>
-                    <img src="../assets/img/otherplants/index/strawberry.jpg" alt="Caladium strawberry" title="Caladium strawberry"/>
+                    <img src="../assets/img/otherplants/index/caladiumstrawberry(1).jpg" alt="Caladium strawberry" title="Caladium strawberry"/>
+                    <img src="../assets/img/otherplants/index/caladiumstrawberry(2).jpg" alt="Caladium strawberry" title="Caladium strawberry"/>
+                    <img src="../assets/img/otherplants/index/caladiumstrawberry(3).jpg" alt="Caladium strawberry" title="Caladium strawberry"/>
+                    <img src="../assets/img/otherplants/index/caladiumstrawberry(4).jpg" alt="Caladium strawberry" title="Caladium strawberry"/>
+                    <img src="../assets/img/otherplants/index/caladiumstrawberry(5).jpg" alt="Caladium strawberry" title="Caladium strawberry"/>
             </div>   
             <div class="index-category-tab-content" id="strawberry2" hidden="hidden">Je le mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 15°C.
             </div>
@@ -84,13 +92,17 @@
                 <a href="#jurassica6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="jurassica1"><span class="species">Solanum quitoense jurassica<a href="otherplantsgallery.html#jurassica">Voir la galerie photo</a></span>
-                    <img src="../assets/img/otherplants/index/solanumquitoensejurassica.jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
+                    <img src="../assets/img/otherplants/index/solanumquitoensejurassica(1).jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
+                    <img src="../assets/img/otherplants/index/solanumquitoensejurassica(2).jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
+                    <img src="../assets/img/otherplants/index/solanumquitoensejurassica(3).jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
+                    <img src="../assets/img/otherplants/index/solanumquitoensejurassica(4).jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
+                    <img src="../assets/img/otherplants/index/solanumquitoensejurassica(5).jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
             </div>   
-            <div class="index-category-tab-content" id="jurassica2" hidden="hidden">Je les mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse ou ils ne recevront aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 10°C.
+            <div class="index-category-tab-content" id="jurassica2" hidden="hidden">Je les mets en intérieur en situation très lumineuse avec soleil au travers d'un voilage ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse ou ils ne recevront aucun rayon de soleil hormis le matin ou le soir. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 10°C.
             </div>
-            <div class="index-category-tab-content" id="jurassica3" hidden="hidden">Je le place en intérieur dans une pièce ou la température ne passera pas sous les 15°C. 
+            <div class="index-category-tab-content" id="jurassica3" hidden="hidden">Je le place en intérieur dans une pièce ou la température ne passera pas sous les 10°C. 
             </div>
-            <div class="index-category-tab-content" id="jurassica4" hidden="hidden">J'arrose assez souvent afin que le substrat soit toujours un peu humide. <br/>Je le fais par bassinage lorsque c'est possible ou de façon généreuse. <br/>N'aime pas l'air trop sec.
+            <div class="index-category-tab-content" id="jurassica4" hidden="hidden">J'arrose assez souvent afin que le substrat ne soit jamais trop sec il réclamera de l'eau si il en manque en laissant pencher ses feuilles et tiges. <br/>Je le fais par bassinage lorsque c'est possible ou de façon généreuse. <br/>N'aime pas l'air trop sec.
             </div>
             <div class="index-category-tab-content" id="jurassica5" hidden="hidden">Je les arrose un peu moins souvent, je laisse juste le substrat sécher un peu sur le haut.
             </div>
@@ -109,7 +121,9 @@
                 <a href="#sensation6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="sensation1"><span class="species">Spathiphyllum sensation<a href="otherplantsgallery.html#sensation">Voir la galerie photo</a></span>
-                    <img src="../assets/img/otherplants/index/spatsensation.jpg" alt="Spathiphyllum sensation" title="Spathiphyllum sensation"/>
+                    <img src="../assets/img/otherplants/index/spathiphyllumsensation(1).jpg" alt="Spathiphyllum sensation" title="Spathiphyllum sensation"/>
+                    <img src="../assets/img/otherplants/index/spathiphyllumsensation(2).jpg" alt="Spathiphyllum sensation" title="Spathiphyllum sensation"/>
+                    <img src="../assets/img/otherplants/index/spathiphyllumsensation(3).jpg" alt="Spathiphyllum sensation" title="Spathiphyllum sensation"/>
             </div>   
             <div class="index-category-tab-content" id="sensation2" hidden="hidden">Je le mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 15°C.
             </div>
@@ -133,7 +147,7 @@
                 <a href="#wallisii6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="wallisii1"><span class="species">Spathiphyllum wallisii<a href="otherplantsgallery.html#wallisii">Voir la galerie photo</a></span>
-                    <img src="../assets/img/otherplants/index/spatwallisii.jpg" alt="spathiphyllum wallisii" title="spathiphyllum wallisii"/>
+                    <img src="../assets/img/otherplants/index/spathiphyllumwallisii.jpg" alt="spathiphyllum wallisii" title="spathiphyllum wallisii"/>
             </div>   
             <div class="index-category-tab-content" id="wallisii2" hidden="hidden">Je le mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 15°C.
             </div>
