--- a/link/othersucculentsgallery.html
+++ b/link/othersucculentsgallery.html
@@ -25,7 +25,7 @@
                     <a href="#echinatum">Delosperma echinatum,</a>
                     <a href="#pulchra">Frithia pulchra,</a>
                     <a href="#lithops">lithops,</a>
-                    <a href="#titanopsis">Titanopsis.</a>
+                    <a href="#titanopsiscalcarea">Titanopsis calcarea.</a>
             </h2>        
         </header>        
                 <hr>
@@ -104,11 +104,11 @@
                 <img class="flex" src="../assets/img/othersucculents/gallery/lithops(8).jpg" alt="lithops" title="lithops"/>
         </section>
                 <hr>
-                <div class="species-title-gallery-category" id="titanopsis">Titanopsis
-                        <a href="othersucculentsindex.html#Titanopsis">Voir la fiche info</a>
+                <div class="species-title-gallery-category" id="titanopsiscalcarea">Titanopsis calcarea
+                        <a href="othersucculentsindex.html#titanopsiscalcarea">Voir la fiche info</a>
                 </div>
                 <hr>
-        <section>                                                                   <!-- TITANOPSIS -->
+        <section>                                                                   <!-- TITANOPSIS CALCAREA -->
                 <img class="flex" src="../assets/img/othersucculents/gallery/titanopsis(1).jpg" alt="Titanopsis" title="Titanopsis"/>
                 <img class="flex" src="../assets/img/othersucculents/gallery/titanopsis(2).jpg" alt="Titanopsis" title="Titanopsis"/>
                 <img class="flex" src="../assets/img/othersucculents/gallery/titanopsis(3).jpg" alt="Titanopsis" title="Titanopsis"/>
