--- a/link/othersucculentsindex.html
+++ b/link/othersucculentsindex.html
@@ -25,7 +25,7 @@
                     <a href="#echinatum">Delosperma echinatum,</a>
                     <a href="#pulchra">Frithia pulchra,</a>
                     <a href="#lithops">lithops,</a>
-                    <a href="#titanopsis">Titanopsis.</a>
+                    <a href="#titanopsiscalcarea">Titanopsis calcarea.</a>
                 </h2>
         </header>
         <hr><hr>
@@ -39,7 +39,11 @@
                 <a href="#cooperi6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="cooperi1"><span class="species">Adromischus cooperi<a href="othersucculentsgallery.html#cooperi">Voir la galerie photo</a></span>
-                    <img src="../assets/img/othersucculents/index/adromischuscooperi.jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
+                    <img src="../assets/img/othersucculents/index/adromischuscooperi(1).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
+                    <img src="../assets/img/othersucculents/index/adromischuscooperi(2).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
+                    <img src="../assets/img/othersucculents/index/adromischuscooperi(3).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
+                    <img src="../assets/img/othersucculents/index/adromischuscooperi(4).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
+                    <img src="../assets/img/othersucculents/index/adromischuscooperi(5).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
             </div>   
             <div class="index-category-tab-content" id="cooperi2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
             </div>
@@ -63,7 +67,11 @@
                 <a href="#americanavariegata6">Rempotage</a>
             </nav-tabs>    
             <div class="index-category-tab-content" id="americanavariegata1"><span class="species">Agave americana variegata<a href="othersucculentsgallery.html#americanavariegata">Voir la galerie photo</a></span>
-                    <img class="flex2" src="../assets/img/othersucculents/index/agaveamericanavariegata.jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
+                    <img class="flex2" src="../assets/img/othersucculents/index/agaveamericanavariegata(1).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
+                    <img class="flex2" src="../assets/img/othersucculents/index/agaveamericanavariegata(2).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
+                    <img class="flex2" src="../assets/img/othersucculents/index/agaveamericanavariegata(3).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
+                    <img class="flex2" src="../assets/img/othersucculents/index/agaveamericanavariegata(4).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
+                    <img class="flex2" src="../assets/img/othersucculents/index/agaveamericanavariegata(5).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
             </div>   
             <div class="index-category-tab-content" id="americanavariegata2" hidden="hidden">Je le laisse dehors en plein soleil direct toute la journée. <br/>
             </div>
@@ -88,7 +96,11 @@
                 <a href="#rufescensvariegata6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="rufescensvariegata1"><span class="species">Anacampseros rufescens variegata<a href="othersucculentsgallery.html#rufescensvariegata">Voir la galerie photo</a></span>
-                    <img src="../assets/img/othersucculents/index/anacampserosrufescensvariegata.jpg" alt="Anacampseros rufescens variegata" title="Anacampseros rufescens variegata"/>
+                    <img src="../assets/img/othersucculents/index/anacampserosrufescensvariegata(1).jpg" alt="Anacampseros rufescens variegata" title="Anacampseros rufescens variegata"/>
+                    <img src="../assets/img/othersucculents/index/anacampserosrufescensvariegata(2).jpg" alt="Anacampseros rufescens variegata" title="Anacampseros rufescens variegata"/>
+                    <img src="../assets/img/othersucculents/index/anacampserosrufescensvariegata(3).jpg" alt="Anacampseros rufescens variegata" title="Anacampseros rufescens variegata"/>
+                    <img src="../assets/img/othersucculents/index/anacampserosrufescensvariegata(4).jpg" alt="Anacampseros rufescens variegata" title="Anacampseros rufescens variegata"/>
+                    <img src="../assets/img/othersucculents/index/anacampserosrufescensvariegata(5).jpg" alt="Anacampseros rufescens variegata" title="Anacampseros rufescens variegata"/>
             </div>   
             <div class="index-category-tab-content" id="rufescensvariegata2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
             </div>
@@ -137,7 +149,11 @@
                 <a href="#echinatum6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="echinatum1"><span class="species">Delosperma echinatum<a href="othersucculentsgallery.html#echinatum">Voir la galerie photo</a></span>
-                    <img src="../assets/img/othersucculents/index/delospermaechinatum.jpg" alt="Delosperma echinatum" title="Delosperma echinatum"/>
+                    <img src="../assets/img/othersucculents/index/delospermaechinatum(1).jpg" alt="Delosperma echinatum" title="Delosperma echinatum"/>
+                    <img src="../assets/img/othersucculents/index/delospermaechinatum(2).jpg" alt="Delosperma echinatum" title="Delosperma echinatum"/>
+                    <img src="../assets/img/othersucculents/index/delospermaechinatum(3).jpg" alt="Delosperma echinatum" title="Delosperma echinatum"/>
+                    <img src="../assets/img/othersucculents/index/delospermaechinatum(4).jpg" alt="Delosperma echinatum" title="Delosperma echinatum"/>
+                    <img src="../assets/img/othersucculents/index/delospermaechinatum(5).jpg" alt="Delosperma echinatum" title="Delosperma echinatum"/>
             </div>   
             <div class="index-category-tab-content" id="echinatum2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
             </div>
@@ -161,7 +177,11 @@
                 <a href="#pulchra6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="pulchra1"><span class="species">Frithia pulchra<a href="othersucculentsgallery.html#pulchra">Voir la galerie photo</a></span>
-                    <img src="../assets/img/othersucculents/index/frithiapulchra.jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                    <img src="../assets/img/othersucculents/index/frithiapulchra(1).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                    <img src="../assets/img/othersucculents/index/frithiapulchra(2).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                    <img src="../assets/img/othersucculents/index/frithiapulchra(3).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                    <img src="../assets/img/othersucculents/index/frithiapulchra(4).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                    <img src="../assets/img/othersucculents/index/frithiapulchra(5).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
             </div>   
             <div class="index-category-tab-content" id="pulchra2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
             </div>
@@ -185,7 +205,11 @@
                 <a href="#lithops6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="lithops1"><span class="species">Lithops<a href="othersucculentsgallery.html#lithops">Voir la galerie photo</a></span>
-                    <img src="../assets/img/othersucculents/index/lithops.jpg" alt="lithops" title="lithops"/>
+                    <img src="../assets/img/othersucculents/index/lithops(1).jpg" alt="lithops" title="lithops"/>
+                    <img src="../assets/img/othersucculents/index/lithops(2).jpg" alt="lithops" title="lithops"/>
+                    <img src="../assets/img/othersucculents/index/lithops(3).jpg" alt="lithops" title="lithops"/>
+                    <img src="../assets/img/othersucculents/index/lithops(4).jpg" alt="lithops" title="lithops"/>
+                    <img src="../assets/img/othersucculents/index/lithops(5).jpg" alt="lithops" title="lithops"/>
             </div>   
             <div class="index-category-tab-content" id="lithops2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
             </div>
@@ -200,27 +224,29 @@
             </div>
         </section>
         <hr>
-        <section class="index-category-system-tabs">                            <!-- TITANOPSIS -->
-            <nav-tabs class="index-category-nav-tabs" id="titanopsis">
-                <a href="#titanopsis1" aria-selected="true">Nom</a>
-                <a href="#titanopsis2">Exposition en été</a>
-                <a href="#titanopsis3">Exposition en hiver</a>
-                <a href="#titanopsis4">Arrosage en été</a>
-                <a href="#titanopsis5">Arrosage en hiver</a>
-                <a href="#titanopsis6">Rempotage</a>
+        <section class="index-category-system-tabs">                            <!-- TITANOPSIS CALCAREA -->
+            <nav-tabs class="index-category-nav-tabs" id="titanopsiscalcarea">
+                <a href="#titanopsiscalcarea1" aria-selected="true">Nom</a>
+                <a href="#titanopsiscalcarea2">Exposition en été</a>
+                <a href="#titanopsiscalcarea3">Exposition en hiver</a>
+                <a href="#titanopsiscalcarea4">Arrosage en été</a>
+                <a href="#titanopsiscalcarea5">Arrosage en hiver</a>
+                <a href="#titanopsiscalcarea6">Rempotage</a>
             </nav-tabs>   
-            <div class="index-category-tab-content" id="titanopsis1"><span class="species">Titanopsis<a href="othersucculentsgallery.html#titanopsis">Voir la galerie photo</a></span>
-                    <img src="../assets/img/othersucculents/index/titanopsis.jpg" alt="Titanopsis" title="Titanopsis"/>
+            <div class="index-category-tab-content" id="titanopsiscalcarea1"><span class="species">Titanopsis<a href="othersucculentsgallery.html#titanopsiscalcarea">Voir la galerie photo</a></span>
+                    <img src="../assets/img/othersucculents/index/titanopsiscalcarea(1).jpg" alt="Titanopsis" title="Titanopsis"/>
+                    <img src="../assets/img/othersucculents/index/titanopsiscalcarea(2).jpg" alt="Titanopsis" title="Titanopsis"/>
+                    <img src="../assets/img/othersucculents/index/titanopsiscalcarea(3).jpg" alt="Titanopsis" title="Titanopsis"/>
             </div>   
-            <div class="index-category-tab-content" id="titanopsis2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
+            <div class="index-category-tab-content" id="titanopsiscalcarea2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
             </div>
-            <div class="index-category-tab-content" id="titanopsis3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
+            <div class="index-category-tab-content" id="titanopsiscalcarea3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
             </div>
-            <div class="index-category-tab-content" id="titanopsis4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+            <div class="index-category-tab-content" id="titanopsiscalcarea4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
             </div>
-            <div class="index-category-tab-content" id="titanopsis5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
+            <div class="index-category-tab-content" id="titanopsiscalcarea5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
             </div>
-            <div class="index-category-tab-content" id="titanopsis6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je le garde dans un pot en terre-cuite de petite taille. <br/>J'ai garni le haut de gravillons de quartz car je n'avais plus que celà et le rendu clair me plaît donc je les laisse.
+            <div class="index-category-tab-content" id="titanopsiscalcarea6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je le garde dans un pot en terre-cuite de petite taille. <br/>J'ai garni le haut de gravillons de quartz car je n'avais plus que celà et le rendu clair me plaît donc je les laisse.
             </div>
         </section>
         <hr>
