--- a/link/othersuspendedindex.html
+++ b/link/othersuspendedindex.html
@@ -32,7 +32,11 @@
                 <a href="#marmoratus6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="marmoratus1"><span class="species">Aeschynanthus marmoratus<a href="othersuspendedgallery.html#marmoratus">Voir la galerie photo</a></span>
-                    <img src="../assets/img/othersuspended/index/aeschynanthusmarmoratus.jpg" alt="Aeschynanthus marmoratus" title="Aeschynanthus marmoratus"/>
+                    <img src="../assets/img/othersuspended/index/aeschynanthusmarmoratus(1).jpg" alt="Aeschynanthus marmoratus" title="Aeschynanthus marmoratus"/>
+                    <img src="../assets/img/othersuspended/index/aeschynanthusmarmoratus(2).jpg" alt="Aeschynanthus marmoratus" title="Aeschynanthus marmoratus"/>
+                    <img src="../assets/img/othersuspended/index/aeschynanthusmarmoratus(3).jpg" alt="Aeschynanthus marmoratus" title="Aeschynanthus marmoratus"/>
+                    <img src="../assets/img/othersuspended/index/aeschynanthusmarmoratus(4).jpg" alt="Aeschynanthus marmoratus" title="Aeschynanthus marmoratus"/>
+                    <img src="../assets/img/othersuspended/index/aeschynanthusmarmoratus(5).jpg" alt="Aeschynanthus marmoratus" title="Aeschynanthus marmoratus"/>
             </div>   
             <div class="index-category-tab-content" id="marmoratus2" hidden="hidden">Je le place dehors là ou il aura une bonne luminosité avec assez peu de soleil direct hormis un peu celui du matin ou du soir à partir de la deuxième quinzaine de Mai ou début Juin jusque courant Octobre.<br/>Je le rentre les nuits ou la température doit passer sous les 15°C.
             </div>
