--- a/link/philodendronsindex.html
+++ b/link/philodendronsindex.html
@@ -33,7 +33,9 @@
             <a href="#whitemeasure6">Rempotage</a>
         </nav-tabs>   
         <div class="index-category-tab-content" id="whitemeasure1"><span class="species">Philodendron white measure<a href="philodendronsgallery.html#whitemeasure">Voir la galerie photo</a></span>
-				      <img src="../assets/img/philodendrons/index/philodendronwhitemeasure.jpg" alt="Philodendron white measure" title="Philodendron white measure"/>
+				      <img src="../assets/img/philodendrons/index/whitemeasure(1).jpg" alt="Philodendron white measure" title="Philodendron white measure"/>
+				      <img src="../assets/img/philodendrons/index/whitemeasure(2).jpg" alt="Philodendron white measure" title="Philodendron white measure"/>
+				      <img src="../assets/img/philodendrons/index/whitemeasure(3).jpg" alt="Philodendron white measure" title="Philodendron white measure"/>
         </div>   
         <div class="index-category-tab-content" id="whitemeasure2" hidden="hidden">Je la place dans un endroit lumineux en évitant qu'elle ne reçoive de soleil direct ou indirect. <br/>En intérieur, il lui arrive de recevoir du soleil au travers d'un voilage. <br/> Si dehors, je la rentre lorsque les nuits ont une température qui passe sous les 15°C.
         </div>
@@ -57,7 +59,9 @@
             <a href="#spruceanum6">Rempotage</a>
         </nav-tabs>   
         <div class="index-category-tab-content" id="spruceanum1"><span class="species">Thaumatophyllum spruceanum<a href="philodendronsgallery.html#spruceanum">Voir la galerie photo</a></span>
-				      <img src="../assets/img/philodendrons/index/thaumatophyllumspruceanum.jpg" alt="Thaumatophyllum spruceanum" title="Thaumatophyllum spruceanum"/>
+				      <img src="../assets/img/philodendrons/index/spruceanum(1).jpg" alt="Thaumatophyllum spruceanum" title="Thaumatophyllum spruceanum"/>
+				      <img src="../assets/img/philodendrons/index/spruceanum(2).jpg" alt="Thaumatophyllum spruceanum" title="Thaumatophyllum spruceanum"/>
+				      <img src="../assets/img/philodendrons/index/spruceanum(3).jpg" alt="Thaumatophyllum spruceanum" title="Thaumatophyllum spruceanum"/>
         </div>   
         <div class="index-category-tab-content" id="spruceanum2" hidden="hidden">Je la place dans un endroit lumineux en évitant qu'elle ne reçoive de soleil direct ou indirect. <br/>En intérieur, il lui arrive de recevoir du soleil au travers d'un voilage. <br/> Si dehors, je la rentre lorsque les nuits ont une température qui passe sous les 15°C.
         </div>
