--- a/link/polysciasindex.html
+++ b/link/polysciasindex.html
@@ -32,8 +32,10 @@
                 <a href="#fabian5">Arrosage en hiver</a>
                 <a href="#fabian6">Rempotage</a>
             </nav-tabs>   
-            <div class="index-category-tab-content" id="fabian1"><span class="species">Polyscias fabian<a href="polysciasgallery.html#fabian">Voir la galerie photo</a></span>
-                    <img src="../assets/img/polyscias/index/polysciasfabian.jpg" alt="Polyscias fabian" title="Polyscias fabian"/>
+            <div class="index-category-tab-content" id="fabian1"><span class="species">fabian<a href="polysciasgallery.html#fabian">Voir la galerie photo</a></span>
+                    <img src="../assets/img/polyscias/index/fabian(1).jpg" alt="fabian" title="fabian"/>
+                    <img src="../assets/img/polyscias/index/fabian(2).jpg" alt="fabian" title="fabian"/>
+                    <img src="../assets/img/polyscias/index/fabian(3).jpg" alt="fabian" title="fabian"/>
             </div>   
             <div class="index-category-tab-content" id="fabian2" hidden="hidden">Je la place dans un endroit lumineux en évitant qu'elle ne reçoive de soleil direct ou indirect. <br/>En intérieur, il lui arrive de recevoir du soleil au travers d'un voilage. <br/> Si dehors, je la rentre lorsque les nuits ont une température qui passe sous les 15°C.
             </div>
@@ -56,8 +58,12 @@
                 <a href="#hawaiianaming5">Arrosage en hiver</a>
                 <a href="#hawaiianaming6">Rempotage</a>
             </nav-tabs>   
-            <div class="index-category-tab-content" id="hawaiianaming1"><span class="species">Polyscias hawaiiana ming<a href="polysciasgallery.html#hawaiianaming">Voir la galerie photo</a></span>
-                    <img src="../assets/img/polyscias/index/polysciashawaiianaming.jpg" alt="Polyscias hawaiiana ming" title="Polyscias hawaiiana ming"/>
+            <div class="index-category-tab-content" id="hawaiianaming1"><span class="species">hawaiiana ming<a href="polysciasgallery.html#hawaiianaming">Voir la galerie photo</a></span>
+                    <img src="../assets/img/polyscias/index/hawaiianaming(1).jpg" alt="hawaiiana ming" title="hawaiiana ming"/>
+                    <img src="../assets/img/polyscias/index/hawaiianaming(2).jpg" alt="hawaiiana ming" title="hawaiiana ming"/>
+                    <img src="../assets/img/polyscias/index/hawaiianaming(3).jpg" alt="hawaiiana ming" title="hawaiiana ming"/>
+                    <img src="../assets/img/polyscias/index/hawaiianaming(4).jpg" alt="hawaiiana ming" title="hawaiiana ming"/>
+                    <img src="../assets/img/polyscias/index/hawaiianaming(5).jpg" alt="hawaiiana ming" title="hawaiiana ming"/>
             </div>   
             <div class="index-category-tab-content" id="hawaiianaming2" hidden="hidden">Je la place dans un endroit lumineux en évitant qu'elle ne reçoive de soleil direct ou indirect. <br/>En intérieur, il lui arrive de recevoir du soleil au travers d'un voilage. <br/> Si dehors, je la rentre lorsque les nuits ont une température qui passe sous les 15°C.
             </div>
