--- a/link/yuccagallery.html
+++ b/link/yuccagallery.html
@@ -18,18 +18,18 @@
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes Yucca</h1>
             </div> 
                 <h2 class="sub-title-gallery-category">Végétaux présents ici: 
-                    <a href="#elephantipes">Yucca elephantipes.</a>
+                    <a href="#elephantipes">elephantipes.</a>
                 </h2>       
     </header>
             <hr>
-            <div class="species-title-gallery-category" id="elephantipes">Yucca elephantipes
+            <div class="species-title-gallery-category" id="elephantipes">elephantipes
                 <a href="yuccaindex.html#elephantipes">Voir la fiche info</a>
             </div>
             <hr>
     <section>                                                                   <!-- YUCCA ELEPHANTIPES -->
-                      <img class="flex" src="../assets/img/yucca/gallery/yuccaelephantipes1.jpg" alt="Yucca elephantipes" title="Yucca elephantipes"/>
-                      <img class="flex" src="../assets/img/yucca/gallery/yuccaelephantipes2.jpg" alt="Yucca elephantipes" title="Yucca elephantipes"/>
-                      <img class="flex" src="../assets/img/yucca/gallery/yuccaelephantipes3.jpg" alt="Yucca elephantipes" title="Yucca elephantipes"/>
+                      <img class="flex" src="../assets/img/yucca/gallery/yuccaelephantipes1.jpg" alt="elephantipes" title="elephantipes"/>
+                      <img class="flex" src="../assets/img/yucca/gallery/yuccaelephantipes2.jpg" alt="elephantipes" title="elephantipes"/>
+                      <img class="flex" src="../assets/img/yucca/gallery/yuccaelephantipes3.jpg" alt="elephantipes" title="elephantipes"/>
 	</section>
 	
 </main>                    
