--- a/link/yuccaindex.html
+++ b/link/yuccaindex.html
@@ -18,7 +18,7 @@
                 <h1 class="title-index-category" id="top">MES YUCCA</h1>
             </div>
                 <h2 class="sub-title-index-category">Végétaux présents ici: 
-                    <a href="#elephantipes">Yucca elephantipes.</a>
+                    <a href="#elephantipes">elephantipes.</a>
                 </h2>
         </header>
                  <hr><hr>
@@ -31,8 +31,12 @@
                 <a href="#elephantipes5">Arrosage en hiver</a>
                 <a href="#elephantipes6">Rempotage</a>
             </nav-tabs>   
-            <div class="index-category-tab-content" id="elephantipes1"><span class="species">Yucca elephantipes<a href="yuccagallery.html#elephantipes">Voir la galerie photo</a></span>
-                    <img src="../assets/img/yucca/index/yuccaelephantipes.jpg" alt="Yucca elephantipes" title="Yucca elephantipes"/>
+            <div class="index-category-tab-content" id="elephantipes1"><span class="species">elephantipes<a href="yuccagallery.html#elephantipes">Voir la galerie photo</a></span>
+                    <img src="../assets/img/yucca/index/elephantipes(1).jpg" alt="elephantipes" title="elephantipes"/>
+                    <img src="../assets/img/yucca/index/elephantipes(2).jpg" alt="elephantipes" title="elephantipes"/>
+                    <img src="../assets/img/yucca/index/elephantipes(3).jpg" alt="elephantipes" title="elephantipes"/>
+                    <img src="../assets/img/yucca/index/elephantipes(4).jpg" alt="elephantipes" title="elephantipes"/>
+                    <img src="../assets/img/yucca/index/elephantipes(5).jpg" alt="elephantipes" title="elephantipes"/>
             </div>   
             <div class="index-category-tab-content" id="elephantipes2" hidden="hidden">Je la place dans un endroit lumineux en évitant qu'elle ne reçoive de soleil direct ou indirect. <br/>En intérieur, il lui arrive de recevoir du soleil au travers d'un voilage. <br/> Si dehors, je la rentre lorsque les nuits ont une température qui passe sous les 12°C.
             </div>
