--- a/modal.html
+++ b/modal.html
@@ -209,7 +209,7 @@
                                                     &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#cooperi"><strong>Adromischus cooperi</strong></a> (Mes autres succulentes).<br/>
                                                     &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#americanavariegata"><strong>Agave americana variegata</strong></a> (Mes autres succulentes).<br/>
                                                     &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#pulchra"><strong>Frithia pulchra</strong></a> (Mes autres succulentes).<br/>
-                                                    &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#titanopsis"><strong>Titanopsis</strong></a> (Mes autres succulentes).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#titanopsiscalcarea"><strong>Titanopsis calcarea</strong></a> (Mes autres succulentes).<br/>
                                                     &nbsp;&nbsp;_Ajout <a href="link/otherplantsindex.html#strawberry1"><strong>Caladium strawberry</strong></a> (Mes autres plantes).
                                                 </div>
                                         </div>
