--- a/link/tillandsiaindex.html
+++ b/link/tillandsiaindex.html
@@ -33,11 +33,11 @@
                 <a href="#tillandsia6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="tillandsia1"><span class="species">Tillandsia<a href="tillandsiagallery.html#tillandsia" title="Galerie photo Tillandsia">Voir la galerie photo</a></span>
-                    <img src="../assets/img/tillandsia/index/tillandsia1.jpg" alt="Tillandsia" title="Tillandsia"/>
-                    <img src="../assets/img/tillandsia/index/tillandsia2.jpg" alt="Tillandsia" title="Tillandsia"/>
-                    <img src="../assets/img/tillandsia/index/tillandsia3.jpg" alt="Tillandsia" title="Tillandsia"/>
-                    <img src="../assets/img/tillandsia/index/tillandsia4.jpg" alt="Tillandsia" title="Tillandsia"/>
-                    <img src="../assets/img/tillandsia/index/tillandsia5.jpg" alt="Tillandsia" title="Tillandsia"/>
+                    <img src="../assets/img/tillandsia/index/tillandsia(1).jpg" alt="Tillandsia" title="Tillandsia"/>
+                    <img src="../assets/img/tillandsia/index/tillandsia(2).jpg" alt="Tillandsia" title="Tillandsia"/>
+                    <img src="../assets/img/tillandsia/index/tillandsia(3).jpg" alt="Tillandsia" title="Tillandsia"/>
+                    <img src="../assets/img/tillandsia/index/tillandsia(4).jpg" alt="Tillandsia" title="Tillandsia"/>
+                    <img src="../assets/img/tillandsia/index/tillandsia(5).jpg" alt="Tillandsia" title="Tillandsia"/>
             </div>   
             <div class="index-category-tab-content" id="tillandsia2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la tempéreture doit passer sous les 15°C.
             </div>
@@ -62,7 +62,11 @@
                 <a href="#ionantha6">Rempotage</a>
             </nav-tabs>   
             <div class="index-category-tab-content" id="ionantha1"><span class="species">Tillandsia ionantha<a href="tillandsiagallery.html#ionantha" title="Galerie photo Tillandsia">Voir la galerie photo</a></span>
-                <img src="../assets/img/tillandsia/index/ionantha.jpg" alt="Tillandsia ionantha" title="Tillandsia ionantha"/>
+                <img src="../assets/img/tillandsia/index/ionantha(1).jpg" alt="Tillandsia ionantha" title="Tillandsia ionantha"/>
+                <img src="../assets/img/tillandsia/index/ionantha(2).jpg" alt="Tillandsia ionantha" title="Tillandsia ionantha"/>
+                <img src="../assets/img/tillandsia/index/ionantha(3).jpg" alt="Tillandsia ionantha" title="Tillandsia ionantha"/>
+                <img src="../assets/img/tillandsia/index/ionantha(4).jpg" alt="Tillandsia ionantha" title="Tillandsia ionantha"/>
+                <img src="../assets/img/tillandsia/index/ionantha(5).jpg" alt="Tillandsia ionantha" title="Tillandsia ionantha"/>
             </div>   
             <div class="index-category-tab-content" id="ionantha2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse ou il ne recevra aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la tempéreture doit passer sous les 15°C. <br/>Elle prend une belle teinte rouge avant et pendant la floraison.
             </div>
